--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,15 @@
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #f9fafb;
+}
+
 li {
   list-style-type: none;
 }
