--- a/src/app/components/pictures-display/pictures-display.component.html
+++ b/src/app/components/pictures-display/pictures-display.component.html
@@ -6,14 +6,19 @@
   </ul>
 
   <!-- Error -->
+  <p *ngIf="errorMessage">{{ errorMessage }}</p>
 
   <!-- No error but no result -->
-  <p *ngIf="photos.length === 0 && !loading && !error">
+  <p *ngIf="photos.length === 0 && !loading && !errorMessage">
     No image available for this query
   </p>
 
   <!-- Loading -->
-  <img *ngIf="loading && !error" class="spinner" src="assets/spinner.svg" />
+  <img
+    *ngIf="loading && !errorMessage"
+    class="spinner"
+    src="assets/spinner.svg"
+  />
 
   <!-- Last page reached-->
   <p *ngIf="maxPages === pageNumber && photos.length !== 0">
